--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
     "ember-ajax": "^2.0.1",
-    "ember-cli": "2.6.2",
+    "ember-cli": "~2.8.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.3",
@@ -50,8 +50,8 @@
   "dependencies": {
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-babel": "^5.1.6",
-    "ember-data": "2.5.3",
-    "ember-engines": "dgeb/ember-engines#v0.2"
+    "ember-data": "~2.8.0",
+    "ember-engines": "~0.3.4"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
